gitops-repo/deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: team1-app  # 네임스페이스 지정
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 'image-registry.openshift-image-registry.svc:5000/team1-app/$(params.IMAGE_NAME):$(tasks.generate-tag.results.image-tag)'
          ports:
            - containerPort: 80
