gitops-repo/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: team1-app
spec:
  selector:
    app: nginx  # Deployment에서 지정한 레이블과 일치
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
